--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -640,6 +640,7 @@ allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
 allow 2001:470:1:908::9001;
 allow 2001:470:1f06:2b4::2;
+allow 2001:470:7:be::2;
 allow 2001:4b20:12:f001::105;
 allow 2001:620:20d0::23;
 allow 2001:620:20d0::24;
@@ -771,6 +772,7 @@ allow 212.69.167.80;
 allow 212.73.134.204;
 allow 212.95.50.77;
 allow 213.111.150.96;
+allow 216.144.230.176;
 allow 216.239.90.19;
 allow 216.73.159.101;
 allow 216.73.159.75;
@@ -1165,6 +1167,7 @@ allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:1dc0:caff:f4::bad5;
 allow 2a00:74a0:e000:1003::114;
 allow 2a00:99a0:0:1000::2;
+allow 2a00:c70:1:185:246:84:179:1;
 allow 2a01:270:9847::1;
 allow 2a01:5e0:36:c311::1;
 allow 2a01:5e0:36:cf2a::1;
@@ -1827,7 +1830,6 @@ allow 81.16.33.42;
 allow 81.17.18.109;
 allow 81.17.28.95;
 allow 81.181.104.22;
-allow 82.117.255.113;
 allow 82.118.248.205;
 allow 82.153.138.125;
 allow 82.153.138.184;
@@ -1925,5 +1927,6 @@ allow 95.143.193.125;
 allow 95.168.173.143;
 allow 95.211.174.137;
 allow 95.211.244.28;
+allow 96.8.119.172;
 allow 97.90.239.170;
 allow 98.128.173.33;
