--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -19,6 +19,7 @@ deny 2001:41d0:a:5c0::1;
 deny 2001:41d0:a:fe22::1;
 deny 2001:470:1:908::9001;
 deny 2001:470:1f06:2b4::2;
+deny 2001:470:7:be::2;
 deny 2001:4b20:12:f001::105;
 deny 2001:620:20d0::23;
 deny 2001:620:20d0::24;
@@ -348,6 +349,7 @@ deny 2a00:1dc0:caff:8b::24bd;
 deny 2a00:1dc0:caff:f4::bad5;
 deny 2a00:74a0:e000:1003::114;
 deny 2a00:99a0:0:1000::2;
+deny 2a00:c70:1:185:246:84:179:1;
 deny 2a01:270:9847::1;
 deny 2a01:5e0:36:c311::1;
 deny 2a01:5e0:36:cf2a::1;
