--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -158,6 +158,7 @@ allow 163.172.45.102;
 allow 164.132.172.209;
 allow 165.73.242.163;
 allow 166.70.207.2;
+allow 167.17.40.92;
 allow 171.25.193.131;
 allow 171.25.193.132;
 allow 171.25.193.20;
@@ -571,7 +572,6 @@ allow 194.42.196.42;
 allow 194.53.137.102;
 allow 194.53.137.156;
 allow 194.55.167.14;
-allow 195.160.220.104;
 allow 195.176.3.23;
 allow 195.176.3.24;
 allow 195.246.231.197;
@@ -728,6 +728,7 @@ allow 203.55.81.1;
 allow 203.55.81.2;
 allow 204.137.14.104;
 allow 204.137.14.105;
+allow 204.137.14.106;
 allow 204.137.14.92;
 allow 204.194.29.4;
 allow 204.76.203.203;
@@ -872,6 +873,7 @@ allow 23.129.64.225;
 allow 23.129.64.99;
 allow 23.137.105.248;
 allow 23.137.248.100;
+allow 23.137.253.109;
 allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.244;
@@ -951,6 +953,7 @@ allow 2602:fb54:1400::1d;
 allow 2602:fc24:10:bb36::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:18:f38f::1;
+allow 2602:fc24:19:1c9::1;
 allow 2602:fc24:19:524::1;
 allow 2602:fc24:19:eb06::dead;
 allow 2602:fccf:100:3::14;
@@ -1465,7 +1468,6 @@ allow 2a0e:97c0:3ea:882::1;
 allow 2a0e:b107:dd0::3:fa35:9316;
 allow 2a0e:bfc0:0:11::796d;
 allow 2a0e:bfc0:0:14::24a8;
-allow 2a0e:bfc0:0:2::8a62;
 allow 2a0e:bfc0:0:5::2;
 allow 2a0e:bfc7:0:3::2d83;
 allow 2a0e:bfc7::216:3cff:fe6f:c4ca;
@@ -1474,6 +1476,7 @@ allow 2a0e:bfc7::216:3cff:fece:19ec;
 allow 2a0e:e701:1198::1;
 allow 2a0e:fa00:0:30::1;
 allow 2a0f:85c1:356:16a4::1;
+allow 2a0f:85c1:356:231b::1;
 allow 2a0f:85c1:356:3238::1;
 allow 2a0f:85c1:356:5c50::1;
 allow 2a0f:85c1:356:62ed::1;
@@ -1494,7 +1497,6 @@ allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a10:8a40:f313::29;
 allow 2a10:c800:1:9cc6::1;
-allow 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 allow 2a12:a800:11:1:124:198:131:108;
 allow 2a12:a800:11:1:124:198:131:114;
 allow 2a12:a800:11:1:124:198:131:191;
@@ -1662,6 +1664,7 @@ allow 45.143.200.32;
 allow 45.145.93.133;
 allow 45.148.10.111;
 allow 45.154.98.33;
+allow 45.38.20.123;
 allow 45.38.20.153;
 allow 45.58.190.74;
 allow 45.61.185.172;
@@ -1708,7 +1711,6 @@ allow 45.9.168.192;
 allow 45.94.31.68;
 allow 45.95.169.104;
 allow 45.95.169.109;
-allow 45.95.169.110;
 allow 45.95.169.252;
 allow 45.95.233.104;
 allow 46.165.243.36;
@@ -1721,6 +1723,7 @@ allow 46.29.238.31;
 allow 5.101.82.22;
 allow 5.104.84.183;
 allow 5.104.86.6;
+allow 51.15.15.12;
 allow 51.15.59.15;
 allow 51.222.142.67;
 allow 51.38.225.46;
