--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -158,6 +158,7 @@ deny 163.172.45.102;
 deny 164.132.172.209;
 deny 165.73.242.163;
 deny 166.70.207.2;
+deny 167.17.40.92;
 deny 171.25.193.131;
 deny 171.25.193.132;
 deny 171.25.193.20;
@@ -571,7 +572,6 @@ deny 194.42.196.42;
 deny 194.53.137.102;
 deny 194.53.137.156;
 deny 194.55.167.14;
-deny 195.160.220.104;
 deny 195.176.3.23;
 deny 195.176.3.24;
 deny 195.246.231.197;
@@ -728,6 +728,7 @@ deny 203.55.81.1;
 deny 203.55.81.2;
 deny 204.137.14.104;
 deny 204.137.14.105;
+deny 204.137.14.106;
 deny 204.137.14.92;
 deny 204.194.29.4;
 deny 204.76.203.203;
@@ -872,6 +873,7 @@ deny 23.129.64.225;
 deny 23.129.64.99;
 deny 23.137.105.248;
 deny 23.137.248.100;
+deny 23.137.253.109;
 deny 23.137.253.254;
 deny 23.137.253.27;
 deny 23.137.254.244;
@@ -951,6 +953,7 @@ deny 2602:fb54:1400::1d;
 deny 2602:fc24:10:bb36::1;
 deny 2602:fc24:12:81a6::1;
 deny 2602:fc24:18:f38f::1;
+deny 2602:fc24:19:1c9::1;
 deny 2602:fc24:19:524::1;
 deny 2602:fc24:19:eb06::dead;
 deny 2602:fccf:100:3::14;
@@ -1465,7 +1468,6 @@ deny 2a0e:97c0:3ea:882::1;
 deny 2a0e:b107:dd0::3:fa35:9316;
 deny 2a0e:bfc0:0:11::796d;
 deny 2a0e:bfc0:0:14::24a8;
-deny 2a0e:bfc0:0:2::8a62;
 deny 2a0e:bfc0:0:5::2;
 deny 2a0e:bfc7:0:3::2d83;
 deny 2a0e:bfc7::216:3cff:fe6f:c4ca;
@@ -1474,6 +1476,7 @@ deny 2a0e:bfc7::216:3cff:fece:19ec;
 deny 2a0e:e701:1198::1;
 deny 2a0e:fa00:0:30::1;
 deny 2a0f:85c1:356:16a4::1;
+deny 2a0f:85c1:356:231b::1;
 deny 2a0f:85c1:356:3238::1;
 deny 2a0f:85c1:356:5c50::1;
 deny 2a0f:85c1:356:62ed::1;
@@ -1494,7 +1497,6 @@ deny 2a0f:df00:0:255::205;
 deny 2a0f:df00:0:255::206;
 deny 2a10:8a40:f313::29;
 deny 2a10:c800:1:9cc6::1;
-deny 2a11:6100:0:12:a236:9fff:fe9e:36ea;
 deny 2a12:a800:11:1:124:198:131:108;
 deny 2a12:a800:11:1:124:198:131:114;
 deny 2a12:a800:11:1:124:198:131:191;
@@ -1662,6 +1664,7 @@ deny 45.143.200.32;
 deny 45.145.93.133;
 deny 45.148.10.111;
 deny 45.154.98.33;
+deny 45.38.20.123;
 deny 45.38.20.153;
 deny 45.58.190.74;
 deny 45.61.185.172;
@@ -1708,7 +1711,6 @@ deny 45.9.168.192;
 deny 45.94.31.68;
 deny 45.95.169.104;
 deny 45.95.169.109;
-deny 45.95.169.110;
 deny 45.95.169.252;
 deny 45.95.233.104;
 deny 46.165.243.36;
@@ -1721,6 +1723,7 @@ deny 46.29.238.31;
 deny 5.101.82.22;
 deny 5.104.84.183;
 deny 5.104.86.6;
+deny 51.15.15.12;
 deny 51.15.59.15;
 deny 51.222.142.67;
 deny 51.38.225.46;
