--- a/allow-tor_ips_v4.conf
+++ b/allow-tor_ips_v4.conf
@@ -769,6 +769,7 @@ allow 23.137.253.254;
 allow 23.137.253.27;
 allow 23.137.254.244;
 allow 23.151.8.8;
+allow 23.155.8.104;
 allow 23.177.185.98;
 allow 23.184.48.78;
 allow 23.190.216.8;
