--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -47,6 +47,7 @@ allow 107.189.1.160;
 allow 107.189.1.175;
 allow 107.189.12.3;
 allow 107.189.12.7;
+allow 107.189.13.180;
 allow 107.189.13.253;
 allow 107.189.13.254;
 allow 107.189.14.4;
@@ -57,6 +58,7 @@ allow 107.189.29.184;
 allow 107.189.30.236;
 allow 107.189.30.49;
 allow 107.189.30.69;
+allow 107.189.30.86;
 allow 107.189.3.11;
 allow 107.189.31.33;
 allow 107.189.31.52;
@@ -589,7 +591,7 @@ allow 195.80.151.242;
 allow 195.88.74.206;
 allow 196.196.200.100;
 allow 196.251.69.116;
-allow 198.167.206.175;
+allow 198.167.206.159;
 allow 198.251.84.163;
 allow 198.251.84.237;
 allow 198.251.88.18;
@@ -940,6 +942,7 @@ allow 2602:f6f6:2:2634::1;
 allow 2602:f6f6:2:3637::1;
 allow 2602:f6f6:2:90f1::1;
 allow 2602:f6f6:2:941d::1;
+allow 2602:f6f6:2:a27::5;
 allow 2602:f6f6:2:ad5c::1;
 allow 2602:f6f6:2:cf34::1;
 allow 2602:f6f6:2:d31a::1;
@@ -1003,6 +1006,7 @@ allow 2605:6400:30:f174:cafe::;
 allow 2605:6400:30:f1fa:f57f:d285:3ed9:ee27;
 allow 2605:6400:30:f38b:28b3:cd24:51f3:e412;
 allow 2605:6400:30:f3d3:7c3:507c:6f32:c132;
+allow 2605:6400:30:f414:bf7c:cd6f:39bc:c682;
 allow 2605:6400:30:f440:757e:adf1:55f7:5a31;
 allow 2605:6400:30:f49b:e2ee:34f8:c854:6f63;
 allow 2605:6400:30:f4ae:8f7b:cc6e:d1d7:b978;
@@ -1215,7 +1219,6 @@ allow 2a04:52c0:103:412::1;
 allow 2a04:52c0:103:5acd::1;
 allow 2a04:52c0:104:4735::1;
 allow 2a04:52c0:104:ad97::1;
-allow 2a04:52c0:105:d7eb::1;
 allow 2a04:52c0:106:394:d59d:f8e1:120:c06c;
 allow 2a04:52c0:106:d219::1;
 allow 2a04:52c0:108:a34f::1;
@@ -1597,6 +1600,7 @@ allow 37.228.129.63;
 allow 37.46.196.22;
 allow 37.48.70.156;
 allow 37.77.56.238;
+allow 38.135.24.176;
 allow 38.135.24.30;
 allow 38.135.24.31;
 allow 38.135.24.32;
@@ -1732,7 +1736,6 @@ allow 51.81.222.62;
 allow 51.91.18.151;
 allow 5.196.95.34;
 allow 5.253.247.27;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.235;
@@ -1907,7 +1910,6 @@ allow 94.74.164.89;
 allow 94.75.225.81;
 allow 95.128.43.164;
 allow 95.143.193.125;
-allow 95.168.173.143;
 allow 95.211.174.137;
 allow 95.211.244.28;
 allow 97.90.239.170;
